compiler/src/test/resources/golden/errors/type_if_branch_mismatch.err
error: the if branches have mismatched types: Int vs String
  --> type_if_branch_mismatch.dawn:2:3
  |
2 |   if b { 1 } else { "two" }
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^
